--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ footer, footer a {color:#fff;}
 <a href="https://bitbucket.org/guerrilha/guerrilhamkt/src/master/">Bitbucket</a><br>
 <a href="https://guerrilhamkt.netlify.app">Netlify</a><br>
 <a href="https://github.com/guerrilhamkt">Git Hub</a><br>
+<a href="https://guerrilhamkt.github.io/guerrilhamkt/"> Git Hub Pages</a><br>
+<a href="https://gitlab.com/guerrilhamkt">Git Lab</a><br>
+<a href="https://guerrilhamkt.gitlab.io/guerrilha-marketing ">Git Lab Pages</a><br>
+<a href="https://guerrihamkt.neocities.org">Neo Cities</a><br>
 <p>
 
 </p>
